--- a/Clock/Clock/MainWindow.xaml
+++ b/Clock/Clock/MainWindow.xaml
@@ -5,8 +5,75 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Clock"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Clock" Height="540" Width="540">
+
+    <Window.Resources>
+        <Style TargetType="Path">
+
+            <Setter Property="StrokeThickness" Value="2" />
+            <Setter Property="StrokeStartLineCap" Value="Round" />
+            <Setter Property="StrokeEndLineCap" Value="Round" />
+            <Setter Property="StrokeLineJoin" Value="Round" />
+            <Setter Property="StrokeDashCap" Value="Round" />
+            <Setter Property="Fill" Value="LimeGreen" />
+        </Style>
+    </Window.Resources>
+
     <Grid>
 
+        <Viewbox>
+            <!-- Панель Grid содержит графику с началом координат (0,0) -->
+            <Grid Width="200" Height="200">
+
+                <!-- Преобразование для всего изображения часов -->
+                <Grid.RenderTransform>
+                    <TranslateTransform X="100" Y="100" />
+                </Grid.RenderTransform>
+
+                <!-- Малые деления часов -->
+                <Path Fill="{x:Null}"
+                      StrokeThickness="3"
+                      StrokeDashArray="0 3.14159">
+                    <Path.Data>
+                        <EllipseGeometry RadiusX="90" RadiusY="90" />
+                    </Path.Data>
+                </Path>
+
+                <!-- Большие деления часов -->
+                <Path Fill="{x:Null}"
+                      StrokeThickness="6"
+                      StrokeDashArray="0 7.854">
+                    <Path.Data>
+                        <EllipseGeometry RadiusX="90" RadiusY="90" />
+                    </Path.Data>
+                </Path>
+
+                <!-- Часовая стрелка, указывающая вверх -->
+                <Path Data="M 0 -60 C 0 -30, 20 -30, 5 -20 L 5 0
+                                    C 5 7.5, -5 7.5, -5 0 L -5 -20
+                                    C -20 -30, 0 -30, 0 -60">
+                    <Path.RenderTransform>
+                        <RotateTransform x:Name="rotateHour" Angle="135" />
+                    </Path.RenderTransform>
+                </Path>
+
+                <!-- Минутная стрелка, указывающая вверх -->
+                <Path Data="M 0 -80 C 0 -75, 0 -70, 2.5 -60 L 2.5 0
+                                    C 2.5 5, -2.5 5, -2.5 0 L -2.55 -60
+                                    C 0 -70, 0 -75, 0 -80">
+                    <Path.RenderTransform>
+                        <RotateTransform x:Name="rotateMinute" Angle="290" />
+                    </Path.RenderTransform>
+                </Path>
+
+                <!-- Секундная стрелка, указывающая вверх -->
+                <Path Data="M 0 10 L 0 -80">
+                    <Path.RenderTransform>
+                        <RotateTransform x:Name="rotateSecond" Angle="195" />
+                    </Path.RenderTransform>
+                </Path>
+            </Grid>
+        </Viewbox>
+        <Image HorizontalAlignment="Center" Height="500"  VerticalAlignment="Center" Width="500" Source="/Image.png" Stretch="Fill" StretchDirection="Both"/>
     </Grid>
 </Window>
